applications/garmeres-frontend/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: garmeres-headers
spec:
  headers:
    customResponseHeaders:
      Alt-Svc: clear
