applications/garmeres-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garmeres-frontend
spec:
  selector:
    app: garmeres-frontend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
